# runseal

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  flavor.json  flavor.toml  install.ps1  install.sh  manage.ps1  manage.sh  package.json  pnpm-lock.yaml  runseal.toml  uninstall.ps1  uninstall.sh  wrangler.jsonc
app/: Cargo.toml
app/examples/: runseal.sample.json  runseal.toml
app/src/: lib.rs  logging.rs
app/src/commands/: alias.rs  mod.rs  preview.rs  profiles.rs  self_update.rs  skill.rs
app/src/core/: alias_store.rs  app.rs  config.rs  env_key.rs  internal_help.rs  mod.rs  profile.rs  runtime.rs
app/src/core/injections/: command.rs  env.rs  mod.rs  (+1 more)
app/src/helpers/: mod.rs
app/tests/: alias.rs  cli.rs  command_mode.rs  default_profile.rs  discovery.rs  first_run.rs  helper_node.rs  internal.rs  internal_tool.rs  internal_wrappers.rs  logging.rs  operator.rs  output_mode.rs  preview.rs  profiles.rs  resources.rs  seal.rs  seal_frame.rs  seal_ground.rs  seal_patterns.rs  transpile.rs  transpile_argv.rs  transpile_cases.rs  transpile_regex.rs  transpile_release.rs  transpile_retry.rs
app/tests/internal_tool/: archive.rs  gitee.rs  github.rs  hash_version.rs  process.rs  ssh.rs  string.rs
app/tests/operator/: cloudflare.rs  estate.rs  guard.rs  init.rs  repo.rs
app/tests/seal/: ir.rs  parser.rs
app/tests/transpile_cases/: argv.rs  command_predicate.rs  env.rs  expansion.rs  regex.rs  release.rs  retry.rs  wrappers.rs
app/tests/transpile_support/: syntax.rs  tool.rs
(+298 files in other folders)
