[package]
name = "envlock"
version = "0.4.6"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
path-absolutize = "3.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.12"
zip = "2.2"

[dev-dependencies]
assert_cmd = "2.0"
