[package]
name = "runseal"
version = "0.1.0-beta.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = "3.1"
path-absolutize = "3.1"
toml = "0.8"
yaml_serde = "0.10"
tempfile = "3.12"

[dev-dependencies]
assert_cmd = "2.0"
